--- a/NtigraDemoMVC/Views/Products/Edit.cshtml
+++ b/NtigraDemoMVC/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model NtigraDemoMVC.Models.UpdateProductViewModel
+﻿@model NtigraDemoMVC.Models.ProductViewModel
 
 
 
@@ -18,11 +18,11 @@
     </div>
     <div class="mb-3">
         <label for="productPrice" name="productPrice" class="form-label">Price</label>
-        <input type="number" min="0.0" required class="form-control" asp-for="Price" id="productPriceInput">
+        <input type="number" min="0.0" step="0.01" required class="form-control" asp-for="Price" id="productPriceInput">
     </div>
     <div class="mb-3">
         <label for="productDiscount" name="productDiscount" class="form-label">Discount</label>
-        <input type="number" min="0.0" class="form-control" asp-for="Discount" id="productDiscountInput">
+        <input type="number" min="0.0" step="0.01" class="form-control" asp-for="Discount" id="productDiscountInput">
     </div>
-    <button type="submit" class="btn btn-primary"><i class="fa fa-save" aria-hidden="true"></i> Save Product</button>
+    <button type="submit" class="btn btn-primary"><i class="fa fa-save" aria-hidden="true"></i>&nbsp; Save Product</button>
 </form>
