--- a/NtigraDemoMVC/Views/Products/Index.cshtml
+++ b/NtigraDemoMVC/Views/Products/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<NtigraDemoMVC.Models.Domain.Product>
+﻿@using System.Globalization;
+@model List<NtigraDemoMVC.Models.ProductViewModel>
 @{
 
 }
@@ -6,7 +7,6 @@
 <h1>Products
     
 </h1>
-<button class="btn btn-defailt" asp-controller="Products" asp-action="Add" name="addProduct"><i class="fa fa-add" aria-hidden="true"></i> Add Product</button>
 <table class="table table-hover table-striped">
     <thead>
         <tr>            
@@ -24,10 +24,10 @@
             <tr>            
                 <td>@product.Name</td>
                 <td>@product.Description</td>
-                <td>@product.Price</td>
-                <td>@product.Discount</td>
+                <td>@product.Price.ToString("C", new CultureInfo("en-US"))</td>
+                <td>@product.Discount.ToString("C", new CultureInfo("en-US"))</td>
                 <td>@product.Created.ToString("dd-MMM-yyyy hh:mm tt")</td>
-                <td><a href="Products/Edit/@product.Id" class="btn btn-primary"><i class="fa fa-edit" aria-hidden="true"></i></a>&nbsp; <a onclick="showConfirmation('@product.Id', '@product.Name')" href="javascript:void(0);" class="btn btn-primary"><i class="fa fa-trash" aria-hidden="true"></i></a> </td>
+                <td><a href="Products/Edit/@product.Id" class="btn btn-dark"><i class="fa fa-edit" aria-hidden="true"></i></a>&nbsp; <a onclick="showConfirmation('@product.Id', '@product.Name')" href="javascript:void(0);" class="btn btn-danger"><i class="fa fa-trash" aria-hidden="true"></i></a> </td>
             </tr>            
         }
         @if (Model.Count == 0)
@@ -44,20 +44,29 @@
    
 </table>
 
-@if (TempData["Message"] != null)
-{
-    <div class="alert alert-success">
-        @TempData["Message"]
-    </div>
-}
-
 <script>
     function showConfirmation(id, name) {
-        var result = window.confirm("Are you sure you want to delete " + name +" item?");
+        var result = window.confirm("Are you sure you want to delete '" + name + "' item?");
         if (result) {
-            location.href = "Products/Delete/" + id;
-            // User clicked "OK," perform the delete action here
-            // You can make an AJAX call or submit a form to delete the item
+            $.ajax({
+                url: "Products/Delete/" + id, 
+                type: "DELETE",
+                success: function (result) {
+                    if (result.success) {
+                        // Item deleted successfully
+                        alert(result.message);
+                        window.location.href = "Products/Index"
+                        // Optionally, reload the page or update the UI
+                    } else {
+                        // Handle the error, show a message, or take appropriate action
+                        alert(result.message);
+                    }
+                },
+                error: function () {
+                    // Handle AJAX error
+                    alert("An error occurred while deleting the item.");
+                }
+            });
         } else {
             // User clicked "Cancel," do nothing or handle accordingly
         }
